Fixed alt text overflowing container in the header element

--- a/experimental/traffic-portal-angular7/src/app/components/dashboard/dashboard.component.scss
+++ b/experimental/traffic-portal-angular7/src/app/components/dashboard/dashboard.component.scss
@@ -28,6 +28,7 @@ header {
 		height: 100%;
 		display: inline-block;
 		max-width: 3em;
+		overflow: hidden;
 	}
 
 	h1 {
